Implement routes and axios in html files

--- a/Backend/public/index.html
+++ b/Backend/public/index.html
@@ -9,19 +9,23 @@
     <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
-    <div class="nav-box-container">
+    <main>
         <div class="nav-container">
             <h3>Travel Buddy</h3>
-            <nav>
+            <nav class="nav-links">
                 <a href="/">Home</a>
                 <a href="/all_travels.html">My Travels</a>
             </nav>
             <h3>Profile</h3>
         </div>
-    </div>
-    <div class="landing-page-box-container">
-        <img src="img/beach-drone.jpg" alt="Background Picture">
-        <button>Book now</button>  
-    </div>
+        <div class="hero-section">
+            <div class="hero-text">
+                <h1 class="title">The world</h1>
+                <p class="subtitle">is waiting for you</p>
+            </div>
+        </div>
+        <a href="add_travel.html" class="book-now-button">Book now</a> 
+        <img src="./img/beach-drone.jpg" alt="Travel image" class="hero-image">
+    </main>
 </body>
 </html>
