--- a/Backend/public/index.html
+++ b/Backend/public/index.html
@@ -15,8 +15,10 @@
             <nav class="nav-links">
                 <a href="/">Home</a>
                 <a href="/all_travels.html">My Travels</a>
+                <a href="">About us</a>
+                <a href="">Contact</a>
             </nav>
-            <h3>Profile</h3>
+            <img src="./img/profile.svg" alt="Profile icon" width="20" height="20">
         </div>
         <div class="hero-section">
             <div class="hero-text">
@@ -24,8 +26,7 @@
                 <p class="subtitle">is waiting for you</p>
             </div>
         </div>
-        <a href="add_travel.html" class="book-now-button">Book now</a> 
-        <img src="./img/beach-drone.jpg" alt="Travel image" class="hero-image">
+        <a href="form.html" class="book-now-button">Book now</a> 
     </main>
 </body>
 </html>
